# harness

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  config.py  main.py  pyproject.toml  run_dev.py  server.py  tui.py
.claude/rules/: git.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AssistantMessage.tsx  ChatInput.tsx  Collapsible.tsx  Icons.tsx  MessageBubble.tsx  MessageWrapper.tsx  SubAgentBlock.tsx  SystemMessage.tsx  TaskProgress.tsx  ThinkingIndicator.tsx  ToolBlock.tsx  UserMessage.tsx
frontend/src/utils/: cn.ts
harness/: agent.py  config.py  enums.py
harness/memory/: conversation.py  task.py
harness/prompts/: __init__.py  system.md
harness/tools/: __init__.py  base.py  calculator.py  file.py  git.py  http_request.py  memory.py  message_agent.py  read_image.py  shell.py  sub_agent.py  task_list.py  task_plan.py  task_update.py  time.py  url_read.py  web_search.py
harness/utils/: enums.py  io.py  log.py
memory/: conversation.py  task.py
prompts/: __init__.py  system.md  system.txt
prompts/profiles/: analyst.md  coder.md  default.md
static/: app.js  index.html  style.css
tests/: test_agent.py  test_config.py  test_conversation.py  test_enum_sync.py  test_tasks.py  test_tools.py
tools/: __init__.py  base.py  calculator.py  file.py  file_read.py  file_write.py  memory.py  python_eval.py  shell.py  sub_agent.py  task_list.py  task_plan.py  task_update.py  time.py  url_read.py  web_search.py
utils/: enums.py  file.py  io.py  log.py
(+5 files in other folders)
