[project]
name = "harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ddgs",
    "fastapi",
    "openai",
    "python-dotenv",
    "uvicorn[standard]",
    "websockets",
]

[project.optional-dependencies]
# Libraries available to the agent via python_eval
agent = [
    "beautifulsoup4",
    "matplotlib",
    "numpy",
    "pandas",
    "requests",
]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["memory", "prompts", "prompts.profiles", "tools", "utils"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["ANN", "E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
